--- a/ManagementSystem/Views/Contacts/Index.cshtml
+++ b/ManagementSystem/Views/Contacts/Index.cshtml
@@ -9,7 +9,8 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+<table id="contacts_table" class="display" style="width: 100%;">
+   <thead>
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.County.Name)
@@ -44,7 +45,8 @@
         </th>
         <th></th>
     </tr>
-
+       </thead>
+    <tbody>
 @foreach (var item in Model) {
     <tr>
         <td>
@@ -84,5 +86,12 @@
         </td>
     </tr>
 }
-
+</tbody>
 </table>
+
+@section scripts 
+{
+    <script type="text/javascript">
+        $("#contacts_table").DataTable();
+    </script>
+}
