--- a/ManagementSystem/Views/Contacts/Create.cshtml
+++ b/ManagementSystem/Views/Contacts/Create.cshtml
@@ -116,12 +116,12 @@
         </div>
         <div class="row" style="padding-top: 25px">
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-                <span>* Indicates Required Field</span>
+                <span>* indicates required field</span>
             </div>
          </div>
         <div class="row" style="padding-top: 25px">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-            <input type="submit" value="Create" class="btn btn-info" />
+            <input type="submit" value="Create" class="btn btn-info" style="width:100%;"/>
         </div>
               </div>
     
