--- a/ManagementSystem/Views/Contacts/Delete.cshtml
+++ b/ManagementSystem/Views/Contacts/Delete.cshtml
@@ -4,43 +4,17 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+
+    <h3>Are you sure you want to delete the contact: @Model.FriendlyName?</h3>
 <div>
-    <h4>Contact</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.County.Name)
+            @Html.DisplayNameFor(model => model.FriendlyName)
         </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.County.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.User.Email)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.User.Email)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LastName)
+            @Html.DisplayFor(model => model.FriendlyName)
         </dd>
 
         <dt>
@@ -51,54 +25,28 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
 
+        @if (Model.DateOfBirth != null)
+        {
+            <dt>
+                @Html.DisplayNameFor(model => model.DateOfBirth)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.DateOfBirth)
+            </dd>
+        }
         <dt>
             @Html.DisplayNameFor(model => model.PhonePrimary)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.PhonePrimary)
         </dd>
-
         <dt>
-            @Html.DisplayNameFor(model => model.DateOfBirth)
+            @Html.DisplayNameFor(model => model.FriendlyAddress)
         </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.DateOfBirth)
+            @Html.DisplayFor(model => model.FriendlyAddress)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.StreetAddress1)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.StreetAddress1)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.StreetAdress2)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.StreetAdress2)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.City)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.City)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Postcode)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Postcode)
-        </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
