--- a/ManagementSystem/Views/Contacts/Edit.cshtml
+++ b/ManagementSystem/Views/Contacts/Edit.cshtml
@@ -80,10 +80,10 @@
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="form-group">
-                    @Html.LabelFor(model => model.StreetAdress2, htmlAttributes: new { @class = "control-label" })
+                    @Html.LabelFor(model => model.StreetAddress2, htmlAttributes: new { @class = "control-label" })
                     <div class="">
-                        @Html.EditorFor(model => model.StreetAdress2, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.StreetAdress2, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.StreetAddress2, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.StreetAddress2, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
