--- a/ManagementSystem/Views/Home/Contact.cshtml
+++ b/ManagementSystem/Views/Home/Contact.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title Me</h2>
+<h3>Here is all my contact information</h3>
 
 <address>
     One Microsoft Way<br />
@@ -12,6 +12,6 @@
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
+    <strong>Email:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
